@@ -1,4 +1,4 @@
- Copyright (C) 2009, 2010, 2011, 2012 Mats Wahlberg
+ Copyright (C) 2009, 2010, 2011, 2012, 2015 Mats Wahlberg
 
  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
@@ -6,6 +6,7 @@
  without any warranty.
 
 TODO: more info in header!
+TODO: add people from credits here! (see README)
 
 Mats ("Slinger") Wahlberg <rcxslinger [at] gmail.com>
 	* Project Maintainer
