@@ -140,7 +140,7 @@ called "make_w32.sh" included to help automate the build process.
 First of all, install MinGW (a minimal port of GNU for windows - it provides
 compilers and standard libraries for compilation). The latest version can be
 downloaded here:
-http://sourceforge.net/projects/mingw/files/latest/download?source=files
+http://sourceforge.net/projects/mingw/files/Installer/mingw-get-setup.exe/download
 
 TODO: new mingw installer is different, mention installing msys in the new gui,
 finding the shell...
@@ -221,28 +221,15 @@ Debugging:
 
 TODO: note about installed vs portable file layout, xdg, $HOME, etc...
 RCX can be configured using a couple of plain-text files divided into several
-directories inside the data directory, such as "teams", "worlds" and "profiles"
+directories inside the data and config directories, such as "teams", "worlds"
+and "profiles"
 
 What you might be most interested in is specified in internal.conf, it
-provides many ways of tweaking the performance, and also is the place where
-you will be able to select resolution, full screen toggling, and eye_distance.
+provides many ways of tweaking the precision and performance, and also is the
+place where you can change default resolution, fullscreen, FOV (or change to a
+realistic, dynamic FOV)
 
-TODO: mention tmp_menu_selections!
-
-TODO: change to fixed angle? Keep short note about eye_distance
-
-If you are wondering about the last one:
-
-The viewing angle in the game is calculated based on your eye distance from
-the screen, in pixels. This system got the advantage of always providing a
-realistic viewing angle for all resolutions. But if you don't like this, you
-can force a viewing angle in the configuration file (internal.conf).
-
-If you want to tweak this value to your specific workstation, determine how
-many pixels a normal length unit is by dividing your screen height (or width)
-resolution with your physical screen height (or width). You can then multiply
-the resulting value with the distance you have measured between your eyes and
-screen (in reality).
+TODO: mention tmp_menu_selections! profile, track/car settings...
 
 
 
@@ -255,7 +242,7 @@ RCX credits (some people referred to by nicknames):
   * "MeAkaJon"			Creating the original project homepage
   * "Spontificus"		Hacks, fixes, move to C++, git and new website
   * "MoruganKodi"/"コディ[KODI]"	Many High Detail 3D models for cars and tracks
-  * "orgyia"			Scramble-like test track and test ramps
+  * "orgyia"			Testing, scramble-like test track and ramps
   * You (yes, you)		For being interested and trying RCX!
 
 
