@@ -1,4 +1,4 @@
-# Copyright (C) 2009, 2010, 2011, 2012, 2014 Mats Wahlberg
+# Copyright (C) 2009, 2010, 2011, 2012, 2014, 2015 Mats Wahlberg
 #
 # Copying and distribution of this file, with or without modification,
 # are permitted in any medium without royalty provided the copyright
@@ -77,15 +77,28 @@ backface_culling true #don't render faces that can't be seen
 fullscreen false #full screen window, will use current screen resolution
 multisample 4 #multisample anti-aliasing (MSAA), number of samples (0=disable)
 
+#TODO: the following two should move to track.conf(/scene.lst)
 #near and for clipping distances
 clipping 1 1500
 
 #fade the far clipping to hide the edge from this distance
-fog 500
+fog 1000
 
-#calculate viewing-angle based on eye distance (in pixels)
-eye_distance 2400
+#fixed field of view, in degrees (horizontally)
+FOV 45 #0=use dynamic FOV instead
 
-#the following forces the viewing angle (horizontally, in degrees)
-view_angle 0 #0=disabled
+#if FOV above is set to 0, a realistic FOV will instead be calculated
+#dynamically based on the resolution of the game window (or screen if in full
+#screen). In order to do this, the game will need to know the distance of your
+#eyes and the screen (measured relative to the resolution of the screen). The
+#following value works for me, but you might want to change it if you are very
+#close to your screen or far away (like in front of a TV):
+eye_distance 2500 #viewer is 2500 "pixels" from screen
+
+#in order to calculate the value above, measure the width of the screen of your
+#monitor (width), the distance between your eyes and the screen (dist), and
+#check your (horizontal) screen resolution (res). Then calculate it like this:
+#
+# = dist*res/width
+#
 
