@@ -1,10 +1,13 @@
-# Copyright (C) 2011, 2014 Mats Wahlberg
+# Copyright (C) 2011, 2014, 2015 Mats Wahlberg
 #
 # Copying and distribution of this file, with or without modification,
 # are permitted in any medium without royalty provided the copyright
 # notice and this notice are preserved. This file is offered as-is,
 # without any warranty.
 
+#
+#visual properties:
+#
 #blue sky
 sky 0.5 0.7 0.8
 
@@ -14,7 +17,10 @@ ambient 0.0 0.0 0.0 #slightly visible "shadows"
 diffuse 1.0 1.0 1.0 #white sun
 specular 1.0 1.0 1.0 #reflections
 
+#
 #physics properties
+#
+#gravity
 gravity 0 0 -9.82 #pretty standard gravity, along z axis
 
 #air density
